--- a/style.css
+++ b/style.css
@@ -2,13 +2,13 @@
     margin:0;
     padding:0;
 }
-.workspace-margin{
+.breadboard-margin{
     position:absolute;
     border: 1px solid black;
     top:20px;
-    left:20px;
-    height:640px;
-    width:740px;
+    left:100px;
+    height:660px;
+    width:780px;
 }
 .workspace{
     position:absolute;
@@ -16,31 +16,20 @@
     left:20px;
     height:600px;
     width:700px;
-    /*margin:20px;*/
     background-image: url("i3.png");
     background-size: 700px 600px;
     background-repeat: no-repeat;
+    opacity:0.3;
+}
+.hole{
+    width:6px;
+    height:6px;
+    border-radius: 50%;
+    border: 1px solid #000000;
+    position: absolute;
 }
 .power{
     position: absolute;
-}
-.power-line-1{
-    position:absolute;
-    display:flex;
-    top:19px;
-    left:52px;
-}
-.power-line-2{
-    position:absolute;
-    display:flex;
-    top:30px;
-    left:52px;
-}
-.power-line-3{
-    position:absolute;
-    display:flex;
-    top:397px;
-    left:51px;
 }
 .power div{
     position: absolute;
@@ -52,21 +41,120 @@
 }
 .block div{
     position: absolute;
-    height:7px;
-    width:7px;
+    height:1px;
+    width:1px;
     border-radius: 50%;
     background-color: black;
-    opacity:0; 
+    /* opacity:0;  */
 }
 .line {
     position: absolute;
     border: 2px solid #007bff;
+    background-color: #007bff;
     transform-origin: top left;
+}
+.ttl {
+    position: absolute;
+    border: 2px solid #000000;
+    transform-origin: top left;
+    background-color: #777777;
+    color:aliceblue;
+    text-align: center;
+
 }
 .control-space{
     position:absolute;
     top:20px;
-    left:800px;
+    left:950px;
     width:200px;
-    /*background-color: #007bff;*/
+}
+.execute-space{
+    position:absolute;
+    top:400px;
+    left:950px;
+    width:600px;
+    height:300px;
+}
+.light{
+    width:15px;
+    height:15px;
+    border-radius: 50%;
+    border: 1px solid #000000;
+}
+.switch-style{
+    position:absolute;
+    width:10px;
+    height:30px;
+    margin: 5px;
+    cursor: pointer;
+    position: relative;
+    overflow: hidden;
+    background-color: #ddd; 
+    transition: background-color 0.1s;
+    top:24px;
+    border: none;
+}
+.switch-style::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 50%;
+    background-color: #ddd;
+    transition: background-color 0.3s;
+}
+.switch-style::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 50%;
+    background-color: #000;
+    transition: background-color 0.3s;
+}
+.switch-style.clicked {
+    background-color: #000;
+}
+.switch-style.clicked::before {
+    background-color: #000;
+}
+.switch-style.clicked::after {
+    background-color: #ddd;
+}
+.switch-discript{
+    margin-top:5px;
+    position: absolute;
+    width:740px;
+    height:20px;
+    top:755px;
+    left:95px;
+}
+.s-btn{
+    width:7px;
+    height:7px;
+    border-radius: 50%;
+    border: 1px solid #000000;
+    margin-top:3px;
+    position: absolute;
+}
+.b-btn{
+    width:6px;
+    height:6px;
+    border-radius: 50%;
+    border: 1px solid #000000;
+    position: absolute;
+}
+.redline{
+    width:316px;
+    height: 2px;
+    position: absolute;
+    background-color: rgb(220, 0, 0);
+}
+.blueline{
+    width:316px;
+    height: 2px;
+    position: absolute;
+    background-color: rgb(0, 180, 220);
 }
